# macroverse

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/macroverse/: cli.py  html.py  hub.py  main.py  models.py  routes.py  server.py  utils.py
src/macroverse/containers/: base.py  docker.py  process.py
src/macroverse/environment/: actions.py
src/macroverse/environment/_name_/: actions.py
src/macroverse/ui/: html.py  page.py
src/macroverse/ui/environment/: actions.py
src/macroverse/ui/environment/_name_/: actions.py
