[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "macroverse"
version = "0.1.0"
description = "Environments for Jupyverse"
license = { file = "LICENSE" }
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
readme = "README.md"
keywords = [
  "jupyter",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "jupyverse[jupyterlab,noauth]",
  "cyclopts",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/macroverse"

[project.scripts]
macroverse = "macroverse.cli:main"

[tool.uv.build-backend]
module-name = "macroverse"
